@@ -199,7 +199,9 @@ tmpl-build.stamp: $(DOC_MODULE)-decl.txt $(SCANOBJ_FILES) $(DOC_MODULE)-sections
 	    touch $(DOC_MODULE)-decl.txt ; \
 	fi
 	gtkdoc-mktmpl --module=$(DOC_MODULE) | tee tmpl-build.log
-	@if grep "WARNING:" tmpl-build.log > /dev/null; then exit 1; fi
+	@if grep "WARNING:" tmpl-build.log > /dev/null; then \
+	    cat $(DOC_MODULE)-unused.txt ; \
+	    exit 1; fi
 	rm -f tmpl-build.log
 	touch tmpl-build.stamp
 
